# trustfall-rustc-adapter

./: .graphqlrc.yml  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml  stubgen
queries/: ty_of_expression.gql
schema/: _rustc_ast_schema.graphql  _rustc_hir_schema.graphql  _rustc_hir_schema_2.graphql
src/: adapter.rs  compiler_config.rs  lib.rs  util.rs
src/adapter/: adapter_impl.rs  edges.rs  entrypoints.rs  mod.rs  properties.rs  schema.graphql  util.rs  vertex.rs
src/adapter/tests/: mod.rs
src/adapter/tests/queries/: ident_of_item.gql  msrv_methods.gql  ty_of_expression.gql  useless_conversion.gql
