[package]
name = "trustfall-rustc-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
trustfall = "0.7.1"

[package.metadata.rust-analyzer]
rustc_private = true
